# sol

./: .gitignore  README.md  justfile  pyproject.toml  setup.py
docs/: architecture.md  plugin-guide.md  usage-guide.md
scripts/: install_skills.py
src/skills/: README.md  __init__.py
src/skills/sol/: SKILL.md
src/skills/sol-skill-creator/: SKILL.md
src/skills/sol-skill-creator/agents/: openai.yaml
src/skills/sol-skill-creator/references/: templates.md
src/skills/sol/agents/: openai.yaml
src/skills/sol/references/: usage-patterns.md
src/sol/: __init__.py  __main__.py  _install_skills.py  adapter.py  cache.py  cache_cli.py  cli.py  client.py  config.py  discovery.py  envelope.py  errors.py  formatter.py  hooks.py  pipeline.py  schema.py  standalone.py
src/sol/adapters/: __init__.py
src/sol/adapters/openapi/: __init__.py  adapter.py
src/sol/auth/: __init__.py  binding.py  cli.py  oauth.py  profile.py
tests/: conftest.py  test_adapter.py  test_auth_bindings.py  test_auth_profiles.py  test_cache.py  test_cli.py  test_client.py  test_config.py  test_discovery.py  test_envelope.py  test_errors.py  test_openapi_adapter.py
